# semester-project-college-toolbox

./: .gitignore  README.md  alembic.ini  docker-compose.yml  dummyReadme.txt  gh_metrics_config.json  package-lock.json
backend/: Dockerfile  README.md  pyproject.toml
backend/database/: README.md
backend/database/prod/: ct-prod.db
backend/src/: alembic.ini  config.py  database.py  main.py  run.py  security.py  utils.py
backend/src/alembic/: README  env.py
backend/src/alembic-dev/: env.py
backend/src/alembic-prod/: README  env.py
backend/src/alembic-prod/versions/: 18cafb92980f_add_term_year_to_schedule_model.py  c03670580ef4_initial_prod_migration.py  f49d4ca77416_add_customfilter_table.py  f5525cc76f06_initial_prod_migration_script.py
backend/src/models/: PDFdocument.py  base.py  user.py
backend/src/models/common/: schedule.py  scheduler.py  user_profile.py
backend/src/models/requests/: calendar.py  login.py  register.py  resources.py  schedule.py  userDocs.py
backend/src/models/responses/: business_model.py  calendar.py  existing_app.py  existing_solution.py  login.py  register.py  schedule.py  section.py  sections.py
backend/src/models/tables/: Application.py  BusinessModel.py  Document.py  ExistingSolution.py  JobApplication.py  PDFdocument.py  Resume.py  __init__.py  (+4 more)
backend/src/repositories/: Document.py  JobApplication.py  Repository.py  Resume.py  ScholarshipApplication.py
backend/src/ssh_scraper/: .gitignore  enums.py  models.py  query_parser.py  scraper.py  sections.db  utils.py  utils_test.py
backend/src/utils/: ExistingSolution.py  calendar.py  course.py  db.py  schedule.py  validation.py
backend/test/: test_config.py  test_main.py  test_scraper_utils.py  test_utils.py
backend/test/ssh_scraper/: query_parser_test.py  utils_test.py
backend/tests/: test_config.py  test_main.py
ssh-scraper/: courses.txt  enums.py  models.py  pyproject.toml  scraper.py  sections.db  utils.py  utils_test.py
(+118 files in other folders)
