[tool.poetry]
name = "college-toolbox"
version = "0.1.0"
description = ""
authors = ["poggecci <alejandro.cruzado@upr.edu>"]
readme = "README.md"

packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
