[tool.poetry]
name = "college-toolbox"
version = "0.1.0"
description = ""
authors = ["poggecci <alejandro.cruzado@upr.edu>"]
readme = "README.md"

packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.103.1"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
